After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671790 - empathy-accounts crashed with SIGSEGV in empathy_account_settings_get_account()
empathy-accounts crashed with SIGSEGV in empathy_account_settings_get_account()
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
3.3.x
Other Linux
: Normal critical
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-03-10 19:02 UTC by Bilal Shahid
Modified: 2012-03-12 12:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
>> stacktrace (12.55 KB, application/octet-stream)
2012-03-10 19:02 UTC, Bilal Shahid
  Details
early return if accounts_dialog_model_get_selected_settings() returns NULL (1.35 KB, patch)
2012-03-12 11:57 UTC, Guillaume Desmottes
committed Details | Review

Description Bilal Shahid 2012-03-10 19:02:49 UTC
Created attachment 209407 [details]
>> stacktrace

I removed the last configured account in the empathy account preferences dialog when the crash happened

ProblemType: Crash
DistroRelease: Ubuntu 12.04
Package: empathy 3.3.5-0ubuntu1
ProcVersionSignature: Ubuntu 3.2.0-18.28-generic-pae 3.2.9
Uname: Linux 3.2.0-18-generic-pae i686
ApportVersion: 1.94.1-0ubuntu2
Architecture: i386
Date: Sat Mar 10 11:58:04 2012
ExecutablePath: /usr/bin/empathy-accounts
InstallationMedia: Ubuntu 12.04 LTS "Precise Pangolin" - Beta i386 (20120301)
ProcCmdline: /usr/bin/empathy-accounts
ProcEnviron:
 LANGUAGE=en_GB:en
 LANG=en_GB.UTF-8
 SHELL=/bin/bash
SegvAnalysis:
 Segfault happened at: 0x809d054 <empathy_account_settings_get_account+4>:	mov    0xc(%eax),%eax
 PC (0x0809d054) ok
 source "0xc(%eax)" (0x0000000c) not located in a known VMA region (needed readable region)!
 destination "%eax" ok
SegvReason: reading NULL VMA
Signal: 11
SourcePackage: empathy
StacktraceTop:
 empathy_account_settings_get_account ()
 ?? ()
 g_cclosure_marshal_VOID__VOID () from /usr/lib/i386-linux-gnu/libgobject-2.0.so.0
 g_closure_invoke () from /usr/lib/i386-linux-gnu/libgobject-2.0.so.0
 ?? () from /usr/lib/i386-linux-gnu/libgobject-2.0.so.0
Title: empathy-accounts crashed with SIGSEGV in empathy_account_settings_get_account()
UpgradeStatus: No upgrade log present (probably fresh install)
UserGroups: adm cdrom dip lpadmin plugdev sambashare sudo
Comment 1 Guillaume Desmottes 2012-03-12 11:09:56 UTC


  • #0 empathy_account_settings_get_account
    at empathy-account-settings.c line 784
  • #1 account_dialow_show_edit_params_dialog
    at empathy-accounts-dialog.c line 663
  • #2 g_cclosure_marshal_VOID__VOID
    at /build/buildd/glib2.0-2.31.20/./gobject/gmarshal.c line 85
  • #3 g_closure_invoke
    at /build/buildd/glib2.0-2.31.20/./gobject/gclosure.c line 777
  • #4 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.31.20/./gobject/gsignal.c line 3547
  • #5 g_signal_emit_valist
    at /build/buildd/glib2.0-2.31.20/./gobject/gsignal.c line 3295
  • #6 g_signal_emit
    at /build/buildd/glib2.0-2.31.20/./gobject/gsignal.c line 3352
  • #7 gtk_button_clicked
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkbutton.c line 1333
  • #8 gtk_real_button_released
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkbutton.c line 2007
  • #9 g_cclosure_marshal_VOID__VOID
    at /build/buildd/glib2.0-2.31.20/./gobject/gmarshal.c line 85
  • #10 g_type_class_meta_marshal
    at /build/buildd/glib2.0-2.31.20/./gobject/gclosure.c line 970
  • #11 g_closure_invoke
    at /build/buildd/glib2.0-2.31.20/./gobject/gclosure.c line 777
  • #12 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.31.20/./gobject/gsignal.c line 3477
  • #13 g_signal_emit_valist
    at /build/buildd/glib2.0-2.31.20/./gobject/gsignal.c line 3295
  • #14 g_signal_emit
    at /build/buildd/glib2.0-2.31.20/./gobject/gsignal.c line 3352
  • #15 gtk_button_button_release
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkbutton.c line 1842
  • #16 gtk_button_button_release
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkbutton.c line 1834
  • #17 _gtk_marshal_BOOLEAN__BOXEDv
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkmarshalers.c line 130
  • #18 g_type_class_meta_marshalv
    at /build/buildd/glib2.0-2.31.20/./gobject/gclosure.c line 997
  • #19 _g_closure_invoke_va
    at /build/buildd/glib2.0-2.31.20/./gobject/gclosure.c line 840
  • #20 g_signal_emit_valist
    at /build/buildd/glib2.0-2.31.20/./gobject/gsignal.c line 3206
  • #21 g_signal_emit
    at /build/buildd/glib2.0-2.31.20/./gobject/gsignal.c line 3352
  • #22 gtk_widget_event_internal
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkwidget.c line 6380
  • #23 propagate_event_up
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkmain.c line 2404
  • #24 propagate_event
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkmain.c line 2504
  • #25 gtk_main_do_event
    at /build/buildd/gtk+3.0-3.3.18/./gtk/gtkmain.c line 1717
  • #26 _gdk_event_emit
    at /build/buildd/gtk+3.0-3.3.18/./gdk/gdkevents.c line 69
  • #27 gdk_event_source_dispatch
    at /build/buildd/gtk+3.0-3.3.18/./gdk/x11/gdkeventsource.c line 358
  • #28 g_main_dispatch
    at /build/buildd/glib2.0-2.31.20/./glib/gmain.c line 2510
  • #29 g_main_context_dispatch
    at /build/buildd/glib2.0-2.31.20/./glib/gmain.c line 3047
  • #30 g_main_context_iterate
    at /build/buildd/glib2.0-2.31.20/./glib/gmain.c line 3118
  • #31 g_main_context_iterate
    at /build/buildd/glib2.0-2.31.20/./glib/gmain.c line 3055
  • #32 g_main_context_iteration
    at /build/buildd/glib2.0-2.31.20/./glib/gmain.c line 3179
  • #33 g_application_run
    at /build/buildd/glib2.0-2.31.20/./gio/gapplication.c line 1496
  • #34 main
    at empathy-accounts.c line 253

Comment 2 Guillaume Desmottes 2012-03-12 11:57:07 UTC
Created attachment 209471 [details] [review]
early return if accounts_dialog_model_get_selected_settings() returns NULL

It can happen, typically if no account is currently selected.
Comment 3 Guillaume Desmottes 2012-03-12 12:00:12 UTC
Attachment 209471 [details] pushed as afcd810 - early return if accounts_dialog_model_get_selected_settings() returns NULL