early return if accounts_dialog_model_get_selected_settings() returns NULL

It can happen, typically if no account is currently selected.

https://bugzilla.gnome.org/show_bug.cgi?id=671790